--- a/.gitignore
+++ b/.gitignore
@@ -45,4 +45,7 @@ Thumbs.db
 .firebase
 *-debug.log
 .runtimeconfig.json
-
+package-lock.json
+src/environments/environment.prod.ts
+src/environments/environment.ts
+src/app/mock-data.ts
